--- a/FIRMWARE/Debug/makefile
+++ b/FIRMWARE/Debug/makefile
@@ -83,8 +83,8 @@ all: main-build
 main-build: BMSLV_2022.elf secondary-outputs
 
 # Tool invocations
-BMSLV_2022.elf BMSLV_2022.map: $(OBJS) $(USER_OBJS) /home/jan/Documents/PUT-Motorsport/PUTM_EV_BMS_LV_2022/FIRMWARE/STM32L4P5RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-g++ -o "BMSLV_2022.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/jan/Documents/PUT-Motorsport/PUTM_EV_BMS_LV_2022/FIRMWARE/STM32L4P5RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BMSLV_2022.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
+BMSLV_2022.elf BMSLV_2022.map: $(OBJS) $(USER_OBJS) D:\GitHub\PUTM_EV_BMS_LV_2022\FIRMWARE\STM32L4P5RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-g++ -o "BMSLV_2022.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\GitHub\PUTM_EV_BMS_LV_2022\FIRMWARE\STM32L4P5RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BMSLV_2022.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
