Build file (nothing important)

--- a/FIRMWARE/Debug/makefile
+++ b/FIRMWARE/Debug/makefile
@@ -1,6 +1,6 @@
 ################################################################################
 # Automatically-generated file. Do not edit!
-# Toolchain: GNU Tools for STM32 (10.3-2021.10)
+# Toolchain: GNU Tools for STM32 (11.3.rel1)
 ################################################################################
 
 -include ../makefile.init
@@ -29,6 +29,9 @@ endif
 ifneq ($(strip $(C++_DEPS)),)
 -include $(C++_DEPS)
 endif
+ifneq ($(strip $(CCM_DEPS)),)
+-include $(CCM_DEPS)
+endif
 ifneq ($(strip $(C_UPPER_DEPS)),)
 -include $(C_UPPER_DEPS)
 endif
@@ -40,6 +43,12 @@ ifneq ($(strip $(S_DEPS)),)
 endif
 ifneq ($(strip $(S_UPPER_DEPS)),)
 -include $(S_UPPER_DEPS)
+endif
+ifneq ($(strip $(CXXM_DEPS)),)
+-include $(CXXM_DEPS)
+endif
+ifneq ($(strip $(C++M_DEPS)),)
+-include $(C++M_DEPS)
 endif
 ifneq ($(strip $(C_DEPS)),)
 -include $(C_DEPS)
@@ -83,8 +92,8 @@ all: main-build
 main-build: BMSLV_2022.elf secondary-outputs
 
 # Tool invocations
-BMSLV_2022.elf BMSLV_2022.map: $(OBJS) $(USER_OBJS) /home/maks/Documents/PUT\ Motorsport/PUTM_EV_BMS_LV_2022/FIRMWARE/STM32L4P5RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-g++ -o "BMSLV_2022.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/maks/Documents/PUT Motorsport/PUTM_EV_BMS_LV_2022/FIRMWARE/STM32L4P5RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BMSLV_2022.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
+BMSLV_2022.elf BMSLV_2022.map: $(OBJS) $(USER_OBJS) C:\Users\micha\Desktop\PUT_Motorsport\BMS_LV\PUTM_EV_BMS_LV_2022\FIRMWARE\STM32L4P5RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-g++ -o "BMSLV_2022.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\micha\Desktop\PUT_Motorsport\BMS_LV\PUTM_EV_BMS_LV_2022\FIRMWARE\STM32L4P5RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BMSLV_2022.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
